Changes
=======

2014-03-17
----------

- Update to Python 3.4.0
  [mj]

2014-03-14
----------

- Use ez_setup.py from setuptools 2.2 for all Python versions >= 2.6.
  [hannosch]

- Update to PyPy 2.2.1.
  [hannosch]

- Update bundled ez_setup.py to version 1.4.2, last to support Python < 2.6.
  [hannosch]

2014-03-13
----------

- Update to Python 3.3.5 and Python 3.4.0rc3.
  [fschulze]


2014-02-14
----------

- Update to Python 3.3.4 and Python 3.4.0rc1.
  [fschulze]


2013-11-26
----------

- Fix missing ssl support in Python 2.4 on Debian, Ubuntu and possibly other
  Linux distributions.
  [nueces, fschulze]

- Update to Python 3.4.0b1.
  [fschulze]

- Fix Python 2.5 for Mavericks.
  [fschulze]


2013-11-22
----------

- Only add the PyPy parts on OS X.
  [fschulze]

- Update to Python 3.3.3 and PyPy 2.2.
  [fschulze]


2013-11-14
----------

- Fix Python 2.4 for Mavericks.


2013-11-13
----------

- Update to Python 2.7.6.
  [fschulze]


2013-11-09
----------

- Update to Python 2.6.9.
  [fschulze]


2013-10-23
----------

- Introduce a new `darwin-mavericks` platform and adjust various parts to
  use the same settings as under `darwin-mountainlion`.
  [hannosch]


2013-10-11
----------

- Replace install-links shell script with a more sophisticated Python one which
  also properly handles pypy.
  [fschulze, mauritsvanrees]


2013-10-10
----------

- Added Python 3.4 to default buildout.cfg.
  [fschulze]

- Use pyvenv for Python 3.4.
  [fschulze]


2013-10-05
----------

- Update to Python 2.6.9rc1.
  [fschulze]

- Added `python34.cfg` for Python 3.4.0a3. Only the build part is active,
  virtualenv 1.10.1 doesn't work with Python 3.4 yet.
  [fschulze]


2013-10-02
----------

- Use collective.recipe.cmmi which allows multiple patches.
  [fschulze]


2013-10-01
----------

- Install PIL in the built python instead of the virtualenv, so any new
  virtualenv created with --system-site-packages has access to it.
  [fschulze]


2013-08-31
----------
