@@ -80,7 +80,7 @@ location = ${buildout:directory}/python-2.4
 executable = ${python-2.4-build:executable}
 easy_install = ${opt:location}/bin/easy_install-2.4
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup-1.x.py
     ${:easy_install} pip==1.1
     ${python-2.4-virtualenv:output} --system-site-packages ${:location}
     ${:location}/bin/easy_install -U collective.dist
