@@ -52,7 +52,7 @@ location = ${buildout:directory}/python-2.5
 executable = ${python-2.5-build:executable}
 easy_install = ${opt:location}/bin/easy_install-2.5
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup-1.x.py
     ${:easy_install} pip==1.3
     ${python-2.5-virtualenv:output} --system-site-packages ${:location}
     ${:location}/bin/easy_install -U collective.dist
