@@ -28,7 +28,7 @@ location = ${buildout:directory}/python-3.3
 executable = ${python-3.3-build:executable}
 easy_install = ${opt:location}/bin/easy_install-3.3
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup-2.2.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
     ${:easy_install} -U pip
     ${python-3.3-virtualenv:output} --system-site-packages ${buildout:directory}/python-3.3
 update-command = ${python-3.3:command}
