@@ -22,7 +22,7 @@ executable = ${python-3.4-build:executable}
 easy_install = ${opt:location}/bin/easy_install-3.4
 pyvenv = ${opt:location}/bin/pyvenv-3.4
 command =
-    ${:executable} ${buildout:python-buildout-root}/ez_setup-2.2.py
+    ${:executable} ${buildout:python-buildout-root}/ez_setup.py
     ${:easy_install} -U setuptools==1.3.2
     ${:easy_install} -U pip
     ${:pyvenv} --system-site-packages ${buildout:directory}/python-3.4
